updated weather.ejs to allow push from index.js

--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -5,6 +5,6 @@
         <label for="cityInput">City Name: </label>
         <input id = "cityInput" type="text" name="cityInput">
         <button type="submit">Go</button>
-        <% console.log(posts); %>
     </form>
+    <p> <%- streamedWeatherData %> </p>
 <%- include("partials/footer"); -%>
